src/occams/form/static/styles/editor.css
/**
 * Interactive editor style directives.
 *
 * Conventions in this file:
 *  - Containers only define widths and top/bottom padding/margin
 *
 * Color Themes used:
 *  http://colorschemedesigner.com/#1T11T3xw0w0w0
 *  http://colorschemedesigner.com/#1T11T1BsO6q6q
 *  http://colorschemedesigner.com/#3z11TsOsOK-K-
 */

/*******************************************************************************
 * MAIN LAYOUT
 ******************************************************************************/

#of-editor {
    border-bottom: 1px dotted #CCC;
    border-top: 1px dotted #CCC;
    cursor: default;
    position: relative;
    overflow: hidden;
    width: 100%;
}

#of-main {
	margin-top: 1em;
    margin-right: 250px;
}

#of-aux {
	margin-top: 1em;
    position: absolute;
    right:0;
    top: 0;
    width: 250px;
}

#of-inputs,
#of-fieldsets {
    margin-right: 1em;
}

/*******************************************************************************
 * TOOLBOX
 ******************************************************************************/

#of-aux h3 {
    background-color: #205C90;
    color: #fff;
    font-size: 1em;
    margin: 0;
    padding: 1% 2%;
    text-align: center;
}

#of-new ul {
    background: #EEE;
    list-style: none;
    margin: 0;
    padding: 0.4em;
}

#of-new li {
    margin: 0 0 0.6em 0;
    width: 250px !important;
}

#of-new li:last-child {
    margin: 0;
}

#of-new a,
#of-new a:active,
#of-new a:link,
#of-new a:hover {
    background-color: #DDD;
    border: inherit !important;
    display: block;
    color: #666 !important;
    font-weight: bold;
    font-size: 85%;
    overflow: hidden;
    padding: 0.3em;
}

#of-new a.object {
    background-color: #D5D5B6;
}

#of-new a:hover {
    background-color: #666;
    color: #fff !important;
    cursor: move;
}

#of-new a.object:hover {
    background-color: #A6A64A;
}

/*******************************************************************************
 * ITEM
 ******************************************************************************/

#of-item-template {
	display: none;
}

.of-placeholder {
	height: 0px !important;
	border: 2px dotted red;
	margin-bottom: 1em;
}

.of-item {
	position: relative;
	margin-bottom: 1em;
}

.of-item > .of-head {
	color: #666;
	font-size: 85%;
	font-weight: bold;
	overflow: hidden;
	position: relative;
}

.of-item .of-metadata {
	margin-left: 16px;
	margin-right: 48px;
    padding: 0.1em 0;
	overflow: hidden;
}

.of-item .of-type,
#of-new a {
    background-position: 1% 50%;
    background-repeat: no-repeat;
    padding-left: 2em !important;
}

.of-item .of-type,
.of-item .of-name
{
	font-family: monospace;
	font-size: 1.3em;
}

.of-item .of-type,
.of-item .of-name,
.of-item .of-title {
	float: left;
	overflow: hidden;
}

.of-item .of-type {
	font-style: italic;
}

.of-item .of-name:before {
	content: ':'
}

.of-item .of-name {
    padding-right: 1em;
}

.of-item  .of-collapseable {
	background: center center url(++resource++collective.z3cform.datagridfield/delete_row_icon.gif);
	display: none; /* Collapsable items are not displayed by default */
	left: 0;
	position: absolute;
	text-indent: -9001em;
	top: 0;
	width: 16px;
}

.of-item  .of-collapsed {
    background-image: url(++resource++collective.z3cform.datagridfield/delete_row_icon.gif);
}

/* FieldSets will be rendered first, so declare object styles first so the
   other type style declarations can override it */
.object .of-type,
#of-new a.object {
    background-image: url(++resource++occams.form/images/table.png);
}

.boolean .of-type,
#of-new a.boolean {
    background-image: url(++resource++occams.form/images/tick.png);
}

.date .of-type,
#of-new a.date {
    background-image: url(++resource++occams.form/images/calendar.png);
}

.datetime .of-type,
#of-new a.datetime {
    background-image: url(++resource++occams.form/images/time.png);
}

.decimal .of-type,
#of-new a.decimal {
    background-image: url(++resource++occams.form/images/calculator.png);
}

.integer .of-type,
#of-new a.integer {
    background-image: url(++resource++occams.form/images/calculator.png);
}

.string .of-type,
#of-new a.string {
    background-image: url(++resource++occams.form/images/textfield.png);
}

.text .of-type,
#of-new a.text {
    background-image: url(++resource++occams.form/images/page_white_text.png);
}

.of-item .of-version {
	float: right;
	padding-right: 1em;
	overflow: hidden;
}

.of-item .of-controls {
	position: absolute;
	right: 0;
	top: 0;
}

.of-item .of-controls ul {
	list-style: none;
	margin: 0 !important;
	overflow: hidden;
	padding: 0;
}

.of-item .of-controls li {
	float: left;
	margin: 0 !important;
    padding: 2px 4px;
}

.of-item .of-controls a {
	border: inherit !important;
	display: block;
	height: 16px;
	line-height: 16px;
	text-indent: -9001em;
	width: 16px;
}

.of-item .of-controls .of-editable {
	background: url(++resource++occams.form/images/pencil.png);
}

.of-item .of-controls .of-deleteable {
	background: url(++resource++occams.form/images/delete.png);
}

.of-item .of-content {
	padding: 0.8em;
}

.of-item .of-content .of-edit {
	display: none;
}

/*******************************************************************************
 * FIELDSET
 ******************************************************************************/

.of-fieldset > .of-head .of-collapseable {
    display: block;
}

.of-fieldset > .of-head {
    background-color: #D5D5B6;
}

.of-fieldset .of-description {
    background-color: #E6E6DA;
    color: #555;
    padding: 0.1em 0.8em;
}

.of-fieldset > .of-content {
    background-color: #FFFFF0;
}

/*******************************************************************************
 * FIELD
 ******************************************************************************/

.of-fields {
   min-height: 5em;
}

.of-field > .of-head {
   background-color: #DDD;
}

.of-field:last-child {
    margin-bottom: 0;
}

.of-field > .of-head .of-collapseable {
    display: none;
}

.of-field > .of-head .of-metadata {
    margin-left: 0;
}


.of-field .of-title,
.of-field .of-description {
    display: none;
}

.of-field .of-content {
    background-color: #EEE;
}


/*******************************************************************************
 * PLONE OVERRIDES
 ******************************************************************************/

/* Re-style Plone's error messages to stand out a little more */
#of-editor .fieldErrorBox .error {
    color: red;
    font-weight: bold;
}

#of-editor input[type="text"],
#of-editor textarea {
	color: inherit !important;
	font-family: "Lucida Grande", Arial, FreeSans !important;
	font-size: inherit !important;
	font-weight: inherit !important;
}

#of-editor input[type="text"][readonly="readonly"],
#of-editor textarea[readonly="readonly"] {
	background-color: #DDD !important;
    color: #666 !important;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-o-user-select: none;
	user-select: none;
}

/*******************************************************************************
 * JQUERY OVERRIDES
 ******************************************************************************/

#of-editor .ui-sortable-placeholder {
    border: 0.2em dotted red;
    visibility: visible !important;
}

#of-editor .ui-sortable-placeholder * {
    visibility: hidden;
}

/*******************************************************************************
 * COLLECTIVE Z3CFORM DATAGRIDFIELD OVERRIDES
 ******************************************************************************/

#of-editor .datagridwidget-table-view {
	border: inherit !important;
	width: 50% !important;
}

#of-editor .datagridwidget-table-view .header {
	font-size: 0.825em !important;
	background: inherit !important;
}

#of-editor .datagridwidget-table-view th{
	padding: 0 0.3em !important;
}

#of-editor .datagridwidget-table-view td{
    padding: 0.3em !important;
}

